--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>らどとれ Creater</title>
+        <title>らどとれ Creator</title>
     </head>
     <body>
         <div id="app">
-            <h1>らどとれ Creater</h1>
+            <h1>らどとれ Creator</h1>
             <p>[<input v-model="line" /> | <input v-model="boundFor" />]</p>
             <p>&gt;&gt;&gt;つぎは&gt;&gt;&gt;<input v-model="next" /></p>
             <p>乗車区間: <input v-model="from" />→<input v-model="to" /></p>
