--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <p>&gt;&gt;&gt;つぎは&gt;&gt;&gt;<input v-model="next" /></p>
             <p>乗車区間: <input v-model="from" />→<input v-model="to" /></p>
             <p>#<input v-model="name" />とれ</p>
-            <button @click="copyToClipboard(entryText)" type="button">Copy</button>
+            <button @click="shareToMastodon(entryText)" type="button">Share to Mastodon</button>
             <textarea rows="10" cols="50" readonly style="display: block">{{entryText}}</textarea>
         </div>
     </body>
@@ -30,6 +30,7 @@
 
 <script type="module">
     import { createApp, ref, computed } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
+    import { encodeUriStrict } from "./lib/strict-uri-encode/index.js";
 
     createApp({
         setup() {
@@ -64,6 +65,12 @@
                     });
             }
 
+            function shareToMastodon(text) {
+                const url = `https://donshare.net/share.html?text=${encodeUriStrict(text)}`;
+                window.open(url,"radotore-share");
+                return false;
+            }
+
             function prettyText(...arg) {
                 return arg.join("\n");
             }
@@ -77,6 +84,7 @@
                 name,
                 entryText,
                 copyToClipboard,
+                shareToMastodon,
             };
         },
     }).mount("#app");
